   glscalef,           gldepthmask,        gldepthrange,      glenableclientstate,
   gldisableclientstate, glpushattrib,     glpopattrib,       gllightmodelf,
   gllightmodeli,      glmaterialf,        glmateriali,       glpixelzoom,
   glpixelstoref,      glpixelstorei,      glpixeltransferf,  glpixeltransferi,
   glstencilmask,      glstencilop,        glclearstencil,    glstencilfunc,
   gltexgend,          gltexgenf,          gltexgeni,         gltexenvf,
   gltexenvi,          gltexparameterf,    gltexparameteri,   glbindtexture,
   glcolormaterial,    glfogf,             glfogi,            glpassthrough,
   glinitnames,        glloadname,         glpushname,        gopopname,
   [not all tested] 

4. New: OpenGL extension functions

5. Change: byte code changed - reserved word limit moved from 128 to 8192.

6. New: reserved words interface, overriding, some, synchronized.  There are in Ada 2005, 2012 but are not used in SparForte.  Reserved for compatibility reasons.

7. Change: containers package was declared in parser_doubly now extracted into separate package.

8. New: vectors (singly linked list) package. new_vector, clear, to_vector, capacity, reserve_capacity, length, set_length, is_empty, append, prepend, first_index, last_index, element [not finished], first_element, last_element, delete_first, delete_last, contains, move, reverse_elements, flip [docs needed] [tests needed]

9. Change: new, faster identifier search function. [pen enums not modified for this]

10. Fix: constants with enumerated values no longer confused with the enumerated value itself.  (e.g. b : boolean := true; ? true; will show "true" not "b").

11. Split byte code compiler into a separate file, removing it from the scanner.

12. Change: pragma advise, annotate, blocked, clarify, depreciated/deprecated, dispute, propose, refactor, todo now accept static string expressions instead of a string literal. [docs needed]
