@@ -44,5 +44,7 @@ CHANGES SINCE 1.5
 
 11. Split byte code compiler into a separate file, removing it from the scanner.
 
-12. Change: pragma advise, annotate, blocked, clarify, depreciated/deprecated, dispute, propose, refactor, todo now accept static string expressions instead of a string literal. [docs needed]
+12. Change: pragma advise, annotate, blocked, clarify, depreciated/deprecated, dispute, propose, refactor, todo now accept static string expressions instead of a string literal. [negative tests needed]
+
+13. New: System.Design_Phase, System.Development_Phase, System.Maintenance_Phase, System.Testing_Phase, reflecting the command line options.
 
